--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "heroku",
     "freecodecamp"
   ],
-  "homepage": "https://calm-stream-10631.herokuapp.com/",
+  "homepage": "voty.herokuapp.com/",
   "repository": {
     "type": "git",
     "url": "https://github.com/jack-doyle/voty"
